Move the push-notifications-permission-modal component into the org-dashboard logic, make sure it's rendered in the right z index order and avoid page scrolls behind it.

--- a/scss/partials/_push_notifications_permission_modal.scss
+++ b/scss/partials/_push_notifications_permission_modal.scss
@@ -6,7 +6,7 @@ div.push-notifications-permission-modal {
   right: 0;
   display: flex;
   flex-direction: column;
-  z-index: #{$navbar_zindex + 156};
+  z-index: #{$navbar_zindex + 180};
   background-color: $oc_gray_8;
 
   .modal-header {
